Fix loading ring dark mode

--- a/res/css/dark-theme.css
+++ b/res/css/dark-theme.css
@@ -1,8 +1,8 @@
 html {
-  --lighter-tone-bg: #2F3845;
+  --lighter-tone-bg: #2f3845;
   --normal-tone-bg: #252c36;
   --darker-tone-bg: #1d2229;
-  --icon-mode: "white";
+  --icon-mode: 'white';
   --shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   --accent-tone-10: rgba(195, 117, 60, 0.1);
   --foreground-tone-10: rgba(255, 255, 255, 0.1);
@@ -27,13 +27,13 @@ html {
 }
 
 .logo {
-  background-image: url("../icons/Tauten-logo-white.svg");
+  background-image: url('../icons/Tauten-logo-white.svg');
 }
 
 .back {
-  background-image: url("../icons/arrow_back_white_24dp.svg");
+  background-image: url('../icons/arrow_back_white_24dp.svg');
 }
 
-.loading {
+.loadingring {
   background-image: url(../icons/Loadingring-white.svg);
 }
